# paypy-app

./: .gitignore  README.md  firstV.rs  shell.nix
paypy-test/: Cargo.toml
paypy-test/src/: main.rs
paypy-wasm/: Cargo.toml
paypy-wasm/src/: lib.rs
paypy-web/: package-lock.json  package.json
paypy-web/src/: app.html
paypy-web/src/lib/: registerServiceWorker.ts
paypy-web/src/lib/components/: OfflineIndicator.ts  TestComponent.svelte
paypy-web/src/routes/: +page.svelte
paypy-web/src/service-worker/: index.ts
paypy-web/static/: manifest.json
