[package]
name = "paypy-test"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["serde"] } # For signatures
rand_core = { version = "0.6.4", features = ["std"] }      # For key generation
sha2 = "0.10.8"                                           # For hashing
hex = "0.4.3"                                             # For string representation of binary data
serde = { version = "1.0.197", features = ["derive"] }    # For serialization
serde_json = "1.0.115"                                    # For easy serialization format
chrono = { version = "0.4.38", features = ["serde"] }     # For timestamps
# For encryption (AEAD - Authenticated Encryption with Associated Data)
aes-gcm = "0.10.3" # Or another AEAD like chacha20poly1305
# For simplicity, we'll use a fixed key. In reality, use X25519 for key exchange.
