[package]
name = "paypy-test"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde"] } # Serde feature for Signature
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4" # For easy display of keys/signatures
chrono = { version = "0.4", features = ["serde"] } # For timestamps
uuid = { version = "1.4", features = ["v4", "serde"] } # For unique IDs
